<resources>
    <string name="app_name" translatable="false">NubChat</string>
    <string name="settings">Settings</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unubscribe</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="pubKey" translatable="false">Publish key</string>
    <string name="subKey" translatable="false">Subscribe key</string>
    <string name="save">Save</string>
    <string name="clean_group">Clean current channel group?</string>
    <string name="about">About</string>
    <string name="getKeys">Get your keys on <a href="https://www.pubnub.com/">PubNub</a></string>
    <string name="username">Username</string>
    <string name="loading">Loading</string>
    <string name="new_channel">New channel</string>
    <string name="cancel">Cancel</string>
    <string name="public_cancel">Public Chancel</string>
    <string name="username_error">Username can\'t be empty</string>
    <string name="credentials_error">length must bee 42</string>
    <string name="settings_war">***NOTE*** YOU MUST ENABLE &#34;STORAGE &#38; PLAYBACK&#34; AND &#34;STREAM CONTROLLER&#34; IN YOUR PUBNUB SETTINGS FOR THESE KEYS</string>
    <string name="choose_username">Choose a username</string>
</resources>
