<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.doingstudio.nubchat.activities.SettingsActivity">

    <TextView
        android:text="@string/settings_war"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsWarmTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/usernameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/settingsWarmTextView"
        android:textColor="#10b2f0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_below="@+id/usernameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text|textMultiLine"
        android:maxLines="2"
        android:background="@drawable/magic_background"
        android:hint="@string/choose_username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subKey"
        android:id="@+id/subKeyTextView"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#10b2f0" />

    <EditText
        android:background="@drawable/magic_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subKeyEditText"
        android:inputType="text|textMultiLine"
        android:maxLines="2"
        android:layout_below="@+id/subKeyTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pubKey"
        android:id="@+id/pubKeyTextView"
        android:layout_below="@id/subKeyEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#10b2f0" />

    <EditText
        android:background="@drawable/magic_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pubKeyEditText"
        android:layout_below="@id/pubKeyTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text|textMultiLine"
        android:maxLines="2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:id="@+id/saveButton"
        android:layout_marginTop="80dp"
        android:layout_below="@id/pubKeyEditText"
        android:layout_centerHorizontal="true"
        />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clean_group"
        android:id="@+id/cleanGroupSwitch"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:checked="true"
        android:layout_below="@id/pubKeyEditText"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:textColor="#10b2f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/getKeysTextView"
        android:textColorLink="@android:color/holo_red_dark"
        android:layout_below="@id/cleanGroupSwitch"
        android:layout_marginTop="10dp"
        android:text="@string/getKeys"
        android:textColor="@color/magicBlue"/>


</RelativeLayout>
</ScrollView>
